--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -6,7 +6,7 @@
     <% if expense.approved? %>
       Approved
     <% else %>
-      <a href="<%= user_expense_approve_path(expense, user_id: @user.id) %>">approve</a>
+      <%= link_to 'approve', approve_user_expense_path(expense, user_id: @user.id), method: :post %>
     <% end %>
 
     <%= link_to 'delete', user_expense_path(expense, user_id: @user.id), method: :delete %>
